[package]
name = "pi_wrr"
version = "0.1.0"
authors = ["vmos <vmosone007@gmail.com>"]
edition = "2018"
description = "Weighted round robin implements for Rust"
repository = "https://github.com/GaiaWorld/pi_wrr"
license = "MIT OR Apache-2.0"
keywords = ["pi", "wrr", "weight"]

[dependencies]

[dev-dependencies]
rand = "0.8"
fastrand = "1.9"
quanta = "0.10"
st3 = "0.4"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"